# mnist_rust_wasm

./: Cargo.toml  Dockerfile  README.md
site/: index.html  index.js  package.json  styles.css  webpack.config.js
src/: lib.rs
