[package]
name = "nn-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.70"
json = "0.12.4"
ndarray = "0.16.1"
serde = { version="1.0.207", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
